--- a/index.html
+++ b/index.html
@@ -35,12 +35,27 @@
       </div>
       <table>
         <tr class="color">
-          <th>색상</th>
-          <td><a class="skyblue" href="#"></a></td>
+          <th>수량</th>
+          <td>
+          <form action="수량">
+            <select name="products" id="products">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+            </select>
+          </form>
+        </td>
         </tr>
         <tr class="size">
           <th>사이즈</th>
-          <td><a class="one" href="#">ONE</a></td>
+          <td><a class="one" href="#">50ml</a></td>
         </tr>
       </table>
   </div>
